@@ -1,8 +1,6 @@
 0.8
 ------
 
-. deprecate setup objects
-
 . support for depedency scanner (#218303)
   . dependencies are calculated just before task is executed possibly by other tasks, not on load time
 . multi-process support
