@@ -191,7 +191,8 @@ class Runner(object):
             catched = task.execute_teardown(sys.stdout, sys.stderr,
                                             self.verbosity)
             if catched:
-                error = SetupError("ERROR on teardown action", catched)
+                msg = "ERROR: task '%s' teardown action" % task.name
+                error = SetupError(msg, catched)
                 self.reporter.cleanup_error(error)
 
 
